# simple_sat_ops

./: .gitignore  CMakeLists.txt  ICOM-9700-capabilities.txt  ICOM-9700-features.txt  README.md  REVIEW_CHECKLIST.md  Session.vim  USAGE.md  antenna_rotator.c  antenna_rotator.h  audio.c  audio.h  audio_stub.c  ax100.c  ax100.h  b210_rx_tx_core.c  b210_rx_tx_core.h  beacon_cts1.c  beacon_cts1.h  csp.c  csp.h  decode_loop.c  decode_loop.h  example.tle  frontiersat.h  golay24.c  golay24.h  hmac_keyfile.c  hmac_keyfile.h  lifetime.c  main.c  modem.c  modem.h  modem_fsk.c  modem_iq.c  modem_viterbi.c  modem_viterbi.h  monitor_squelch.c  next_in_queue.c  oem.c  (+41 more)
.github/workflows/: unit-tests.yml
TLEs/: SwarmA.tle  SwarmB.tle  SwarmC.tle  active.tle  amateur.tle  science.tle
apps/: cli_args.c  cli_args.h  conjunction.c  lifetime.c  main.c  next_in_queue.c  tle_compare.c  tle_from_state.c  tle_keps.c  uplink_test.c
cmake/: sso_version.h.in
demo/: convert_to_gif.sh
docs/: USER_MANUAL.md  VIEWER_STREAM_JSON.md
docs/decoding/: .gitignore  DECODING.md  README.md  fig_asm_correlation.gp  fig_discriminator.gp  fig_eye_diagram.gp  fig_gardner_scurve.gp  fig_matched_filter.gp  fig_msk_trajectory.gp  fig_rs_cliff.gp  fig_scrambler_spectrum.gp  gen_figdata.c  make_figures.sh
etc/logrotate.d/: sso
etc/tmpfiles.d/: sso.conf
satellites/: active_radios.txt  amateur_20250307.tle
scripts/: antenna_cam.sh  clean_tx_logs.sh  decode_passes.sh  decode_regression.expected  decode_regression.sh  fetch_tle.sh  gate_beacon_audio.sh  gen_tcmd_spec.py  lint_warnings.sh  migrate_gnss_label.sh  next_satellite.sh  nextpass.sh  noise_skymap.py  pcm2wav.sh  plot_sky_pass.py  plot_sky_pass.sh  radio_paces.sh  radio_pic.sh  rx_record.sh  satnogs_pull.sh  scan_iq.py  self_test_smoke.sh  sso_admin.sh  sso_setup_root.sh  stream_latest_iq.sh  tx_rx_test.sh  upcoming_amateur_satellite_passes.sh  verify_uplink_frame.py
sgp4sdp4/: CMakeLists.txt  Makefile  sgp4sdp4.h
src/: app_state.h  op_state.h  qol.h  rot_state.h  sdr_state.h  sso_time.h  state.h  track_state.h  trsw_state.h  tx_state.h  ui_state.h
src/audio/: audio_io.c  audio_io.h  miniaudio_impl.c  ogg_stream.c  ogg_stream.h
src/beacon/: beacon_cts1.c  beacon_cts1.h  frontiersat.h  satellite_status.c  satellite_status.h  telemetry.c  telemetry.h
src/cli/: argparse.h
src/control/: hw_bringup.c  hw_bringup.h  operator_audio.c  operator_audio.h  operator_ipc.c  operator_ipc.h  pass_session.c  pass_session.h  scan_sky.c  scan_sky.h  tracking.c  tracking.h
src/db/: packet_db.c  packet_db.h
src/dsp/: asm_search.c  asm_search.h  biquad.c  biquad.h  fir_decim.c  fir_decim.h  fm_demod.h  fm_mod.c  fm_mod.h  frame_rssi.c  frame_rssi.h  iq_burst.c  iq_burst.h  modem.c  modem.h  modem_fsk.c  modem_fsk.h  modem_iq.c  modem_iq.h  modem_viterbi.c  modem_viterbi.h  monitor_squelch.c  monitor_squelch.h  resample.c  resample.h  sw_nco.c  sw_nco.h
src/hw/: antenna_rotator.c  antenna_rotator.h  antenna_rotator_async.c  antenna_rotator_async.h  b210_rx_tx_core.c  b210_rx_tx_core.h  carrier_trim.c  carrier_trim.h  rotator_calibrate.c  rotator_calibrate.h  sdr_backend.c  sdr_backend.h  sdr_rtlsdr.c  sdr_uhd.c  sdr_usb_detect.c  sdr_usb_detect.h  tr_switch.c  tr_switch.h
src/ipc/: ipc_fill.c  ipc_fill.h  pass_schedule.c  pass_schedule.h  sso_audit.c  sso_audit.h  sso_base64.c  sso_base64.h  sso_dirwatch.c  sso_dirwatch.h  sso_ipc.c  sso_ipc.h  sso_ipc_client.c  sso_ipc_codec.c  sso_ipc_internal.h  sso_ipc_paths.c  sso_ipc_paths.h  sso_ipc_server.c  sso_operator.c  sso_operator.h  sso_paths.c  sso_paths.h
src/orbit/: bestxyz.c  bestxyz.h  conjunction.c  conjunction.h  ephemeres.h  oem.c  oem.h  prediction.c  prediction.h  pursuit.c  pursuit.h  shortarc.c  shortarc.h  tle_csv.c  tle_csv.h  tle_io.h
src/pipeline/: decode_loop.c  decode_loop.h  rx_session.c  rx_session.h  rx_tui.c  rx_tui.h  tx_burst.c  tx_burst.h
src/proto/: adcs_mag.c  adcs_mag.h  agenda_line.c  agenda_line.h  ax100.c  ax100.h  csp.c  csp.h  gnss_frag.c  gnss_frag.h  golay24.c  golay24.h  hmac_keyfile.c  hmac_keyfile.h  rs.h  sso_pseudo.c  sso_pseudo.h  tcmd_lint.c  tcmd_lint.h  tcmd_response.h  tcmd_spec.c  tcmd_spec.h
src/ui/: auto_tcmd.c  auto_tcmd.h  cmd_line.c  cmd_line.h  duration_fmt.c  duration_fmt.h  input.c  input.h  keybindings.c  keybindings.h  live_waterfall.c  live_waterfall.h  panels.c  panels.h  spectrogram.c  spectrogram.h  tui.c  tui.h  tx_compose.c  tx_compose.h  tx_log.c  tx_log.h  ui_text.c  ui_text.h  ui_textfield.c  ui_textfield.h  viewer.c  (+1 more)
unit_tests/: adcs_mag_selftest.c  agenda_line_selftest.c  antenna_rotator_selftest.c  argparse_selftest.c  asm_search_selftest.c  ax100_selftest.c  base64_selftest.c  beacon_cts1_selftest.c  bestxyz_selftest.c  biquad_selftest.c  cam_jpeg_selftest.c  clip_ellipsis_selftest.c  conjunction_selftest.c  csp_selftest.c  duration_fmt_selftest.c  fir_decim_selftest.c  fm_demod_selftest.c  fm_mod_selftest.c  frame_rssi_selftest.c  gnss_frag_selftest.c  golay24_selftest.c  hmac_keyfile_selftest.c  ipc_fill_selftest.c  iq_burst_selftest.c  keybindings_selftest.c  modem_fsk_selftest.c  modem_iq_selftest.c  monitor_squelch_selftest.c  oem_selftest.c  ogg_stream_selftest.c  packet_db_selftest.c  pass_schedule_selftest.c  prediction_selftest.c  pursuit_selftest.c  resample_selftest.c  rs_selftest.c  runner.c  shortarc_selftest.c  sso_ipc_codec_selftest.c  sso_pseudo_selftest.c  (+7 more)
utils/: agenda_check.c  antenna_rotator_selftest.c  ax100_selftest.c  b210_gain_sweep.c  b210_rx_capture.c  b210_rx_live.c  b210_rx_tx.c  beacon_detect.c  beacon_gen.c  browser_timefmt.h  cam_jpeg.c  cam_jpeg.h  cam_reconstruct.c  decode_inspector.c  decode_inspector_macos.m  fm_preview.c  gen_waterfall.c  gnss_opm.c  gnss_reports.c  ham_listen.c  ham_speak.c  iq_annotator.c  iq_annotator_macos.m  live_waterfall.c  mag_reports.c  modem_iq_selftest.c  packet_browser.c  packet_query.c  pdf_writer.c  pdf_writer.h  prediction_selftest.c  radio_ctl.c  rs_selftest.c  rx_decode.c  rx_replay.c  sdr_probe.c  tcmd_browser.c  tcmd_import.c  tle_csv_selftest.c  tx_frame.c  (+5 more)
(+5 files in other folders)
